# FSB.Application.HRM

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  docker.yml
src/hrm/: __main__.py  cli.py  main.py
src/hrm/api/: __init__.py
src/hrm/core/: __init__.py  application.py  model.py  persistence.py
tests/acceptance/: environment.py
tests/acceptance/features/: editing.feature  registration.feature  status_changing.feature
tests/acceptance/helpers/: driver.py  sut.py
tests/acceptance/steps/: registration.py
